--- a/.github/workflows/train-cuda.yml
+++ b/.github/workflows/train-cuda.yml
@@ -22,9 +22,11 @@ jobs:
         with:
           python-version: '3.10'
       - name: Set up CUDA (NVIDIA GPU)
-        uses: Jimver/cuda-toolkit@v0.2.11
+        uses: Jimver/cuda-toolkit@v0.2.25
+        id: cuda-toolkit
         with:
-          cuda: '12.1.0'
+          log-file-suffix: '${{matrix.os}}.txt'
+          cuda: '12.8.0'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
